# Company_Lens

./: LICENSE  README.md
ai/: pyproject.toml
ai/src/company_scraper/: company_scraper.py
ai/src/company_scraper/config/: aggregators.py  belgian_annual_account_models.py  config.py  models.py  prompts.py  urls.py
ai/src/company_scraper/runnable/: company_description.py  company_scraper.py  legal_data.py  test_api.py
ai/src/company_scraper/schema/: company_schema.py  data_process.py  schema_wrapper.py
ai/src/company_scraper/tests/: test_utils.py
ai/src/company_scraper/tools/: establishment_units_extractor.py  financial_data_extractor.py  format.py  general_information_extractor.py  scraper.py  utils.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.d.ts
frontend/src/components/: HeroSection.tsx  Navbar.tsx
frontend/src/components/AnalyticsSection/: EuropeanPresenceCard.tsx  PerformanceCard.tsx  ProgressBar.tsx  index.tsx
frontend/src/components/CompanyOverview/: CompanyHeader.tsx  StatCard.tsx  index.tsx
frontend/src/components/FeaturesSection/: FeatureCard.tsx  index.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Signup.tsx
