[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rayan Benaissa <rayanbenaissa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
beautifulsoup4 = "4.12.3"
sentence-transformers = "3.0.1"
langchain-core = "0.3.40"
langchain-community = "0.3.8"
django = "4.2.15"
openai = "1.55.0"
python-dotenv = "1.0.1"
langchain-openai = "0.2.10"
redis = "5.0.3"
pydantic = "2.10.1"
aiohttp = "3.9.5"
playwright = "1.50.0"
transformers = "4.42.3"
pandas = "2.2.3"
langgraph = "0.2.53"
googlesearch-python = "1.3.0"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
